Further layout HTML and CSS

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-* {
+html, * {
     box-sizing: border-box;
 }
 
@@ -8,18 +8,19 @@ button, input {
 
 #main-window {
     height: 100vh;
-    width: 100vw;
     display: grid;
-    grid-template-columns: minmax(250px, 1fr) 5fr;
+    grid-template-columns: 250px 1fr;
 }
 
 #sidebar {
     background: yellow;
     display: grid;
-    grid-template-rows: 1fr 2fr 2fr;
+    grid-template-rows: 1fr 4fr 2fr;
 }
 
 #logo {
+    margin-top: 30px;
+    align-self: start;
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 1rem;
@@ -45,27 +46,30 @@ button, input {
     text-decoration: none;
     display: grid;
     align-items: center;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
     font-size: 1.5rem;
     gap: 1rem;
     padding: 0.75rem 0;
 }
 
-.sidebar-nav ul {
-    display: grid;
+#nav-section1 {
+    align-self: start;
+}
+
+#nav-section2 {
+    align-self: end;
+    padding-bottom: 30px;
 }
 
 #content {
     background: green;
     display: grid;
-    grid-template-rows: min-content 1fr;
-    align-content: center;
+    grid-template-rows: 170px 1fr;
 }
 
 #content-header-wrapper {
-    max-height: fit-content(100%);
     display: grid;
-    grid-template: 1fr 1fr / 60% 1fr;
+    grid-template: 1fr 1fr / 2fr 1fr;
     align-items: center;
     padding: 1rem 6rem 1rem 3rem;
     margin: 0;
@@ -151,5 +155,100 @@ button, input {
 }
 
 #content-main {
-    background: blue;
+    background: lightseagreen;
+}
+
+#content-wrapper {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    "projects announcements"
+    "projects trending";
+
+}
+
+#projects {
+    background: lightsalmon;
+    padding: 2rem;
+    grid-area: projects;
+}
+
+#content-main h2 {
+    font-size: 1.4rem;
+    margin-bottom: 15px;
+}
+
+#card-wrapper {
+    align-items: center;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: minmax(300px, 1fr) minmax(300px, 1fr);
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 2rem;
+}
+
+.card {
+    padding: 0px 25px;
+    height: 100%;
+    background: lightgray;
+    display: grid;
+    grid-template-rows: 3rem min-content 1fr;
+}
+
+.card-title {
+    margin-top: 30px;
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
+.card-text {
+    line-height: 1.3;
+    padding-top: 5px;
+    margin-bottom: 15px;
+}
+
+.card-icon-container {
+    align-self: end;
+    justify-self: end;
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 15px;
+    padding-right: 15px;
+}
+
+#announcements {
+    background: lightgoldenrodyellow;
+    grid-area: announcements;
+    padding: 2rem;
+}
+
+#trending {
+    background: lightpink;
+    grid-area: trending;
+    padding: 2rem;
+}
+
+#announcements-card {
+    background: rebeccapurple;
+    display: grid;
+    grid-template-rows: 1fr 3px 1fr 3px 1fr;
+    padding: 2rem;
+}
+
+.announcement-title {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.announcement {
+    padding: 10px 0;
+}
+
+.separator {
+    background: white;
+    height: 1px;
+    opacity: 35%;
 }
