--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@ html, * {
     box-sizing: border-box;
 }
 
+
+
 button, input {
     border: none;
 }
@@ -115,10 +117,24 @@ button, input {
 }
 
 .profile-pic-small {
-    width: auto;
-    max-height: 48px;
+    width: 48px;
+    height: 48px;
+    overflow: hidden;
     border-radius: 100%;
 }
+
+.profile-pic-small img {
+    max-height: 60px;
+    position: relative;
+}
+
+.profile-pic-large {
+    width: 72px;
+    height: 72px;
+    overflow: hidden;
+    border-radius: 100%;
+}
+
 
 #welcome-wrapper {
     display: grid;
@@ -161,7 +177,7 @@ button, input {
 #content-wrapper {
     height: 100%;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 4fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas:
     "projects announcements"
@@ -177,33 +193,35 @@ button, input {
 
 #content-main h2 {
     font-size: 1.4rem;
-    margin-bottom: 15px;
+    padding-bottom: 1rem;
 }
 
 #card-wrapper {
-    align-items: center;
-    justify-content: center;
+    place-items: center;
     display: grid;
-    grid-template-columns: minmax(300px, 1fr) minmax(300px, 1fr);
+    grid-template-columns: repeat(2, minmax(500px, 1fr));
     grid-template-rows: 1fr 1fr 1fr;
     gap: 2rem;
 }
 
 .card {
-    padding: 0px 25px;
     height: 100%;
     background: lightgray;
     display: grid;
     grid-template-rows: 3rem min-content 1fr;
+    justify-content: start;
+    border-radius: 8px;
 }
 
 .card-title {
     margin-top: 30px;
     font-size: 1.2rem;
     font-weight: 700;
+    padding-left: 4rem;
 }
 
 .card-text {
+    padding: 0.5rem 8rem 0 4rem;
     line-height: 1.3;
     padding-top: 5px;
     margin-bottom: 15px;
@@ -221,13 +239,7 @@ button, input {
 #announcements {
     background: lightgoldenrodyellow;
     grid-area: announcements;
-    padding: 2rem;
-}
-
-#trending {
-    background: lightpink;
-    grid-area: trending;
-    padding: 2rem;
+    padding: 2rem 2rem 2rem 0;
 }
 
 #announcements-card {
@@ -235,6 +247,7 @@ button, input {
     display: grid;
     grid-template-rows: 1fr 3px 1fr 3px 1fr;
     padding: 2rem;
+    border-radius: 8px;
 }
 
 .announcement-title {
@@ -251,4 +264,48 @@ button, input {
     background: white;
     height: 1px;
     opacity: 35%;
+}
+
+#trending {
+    align-items: center;
+    background: lightpink;
+    grid-area: trending;
+    padding: 2rem 2rem 2rem 0;
+}
+
+#trending-card {
+    align-items: center;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
+    background: lightslategray;
+    padding: 1rem;
+    row-gap: 1rem;
+    height: 87%;
+    border-radius: 8px;
+}
+
+.trending-entry {
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+    "icon handle"
+    "icon title";
+}
+
+.trending-handle {
+    grid-area: handle;
+    justify-self:start;
+    align-self: flex-end;
+}
+
+.trending-title {
+    grid-area: title;
+    justify-self:start;
+}
+
+.trending-entry > .profile-pic-small {
+    grid-area: icon;
 }
