--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,14 @@
-html, * {
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,700;1,400&display=swap');
+
+html {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Rubik', -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
+    font-size: 12px;
 }
 
 button, input {
@@ -16,9 +23,10 @@ button, input {
 }
 
 #sidebar {
-    background: yellow;
     display: grid;
     grid-template-rows: 1fr 4fr 2fr;
+    background: rgb(197, 80, 80);
+    color: white;
 }
 
 #logo {
@@ -27,7 +35,7 @@ button, input {
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 1rem;
-    place-items: center;
+    place-items: end;
 }
 
 #logo-icon {
@@ -38,21 +46,28 @@ button, input {
 #title {
     font-size: 2rem;
     justify-self: start;
+    padding-bottom: 3px;
 }
 
 .sidebar-nav-icon {
     justify-self: end;
     font-size: 24px;
+    padding: 0;
 }
 
 .sidebar-nav a {
     text-decoration: none;
     display: grid;
-    align-items: center;
-    grid-template-columns: 1fr 4fr;
-    font-size: 1.5rem;
-    gap: 1rem;
+    align-items: flex-end;
+    grid-template-columns: 1fr 3.5fr;
+    font-size: 1.3rem;
+    gap: 2rem;
     padding: 0.75rem 0;
+    color: white;
+}
+
+.sidebar-link {
+    padding-bottom: 3px;
 }
 
 #nav-section1 {
@@ -65,20 +80,24 @@ button, input {
 }
 
 #content {
-    background: green;
     display: grid;
-    grid-template-rows: 170px 1fr;
+    grid-template-rows: min-content 5fr;
+    background: lightslategray;
+    height: 100%;
 }
 
 #content-header-wrapper {
     display: grid;
-    grid-template: 1fr 1fr / 2fr 1fr;
+    grid-template: 1fr 2fr / 2fr 1fr;
     align-items: center;
-    padding: 1rem 6rem 1rem 3rem;
+    padding: 0 6rem 0 3rem;
     margin: 0;
+    background: white;
 }
 
-#search-wrapper {  
+#search-wrapper { 
+    padding-top: 10px;
+    align-self: center;
     display: flex;
     gap: 1rem;
 }
@@ -101,6 +120,7 @@ button, input {
 }
 
 #user-wrapper {
+    padding-top: 1rem;
     display: grid;
     justify-self: end;
     grid-template-columns: 1fr 1fr 2fr;
@@ -110,6 +130,7 @@ button, input {
 
 #username-display-small {
     font-size: 1.4rem;
+    font-weight: 700;
 }
 
 .notification-icon {
@@ -132,7 +153,7 @@ button, input {
 .profile-pic-large {
     width: 72px;
     height: 72px;
-    overflow: hidden;
+    overflow: clip;
     border-radius: 100%;
 }
 
@@ -145,7 +166,8 @@ button, input {
 }
 
 #greeting-text {
-    font-weight: 700;
+    font-size: 1.2rem;
+    line-height: 1.6;
 }
 
 #username-display-large {
@@ -171,11 +193,8 @@ button, input {
     border-radius: 50px;
 }
 
-#content-main {
-    background: lightseagreen;
-}
-
 #content-wrapper {
+    height: 100%;
     display: grid;
     grid-template-columns: 4fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -186,7 +205,6 @@ button, input {
 }
 
 #projects {
-    background: lightsalmon;
     padding: 2rem;
     grid-area: projects;
 }
@@ -197,34 +215,37 @@ button, input {
 }
 
 #card-wrapper {
-    place-items: center;
+    justify-content: space-between;
     display: grid;
     grid-template-columns: repeat(2, minmax(500px, 1fr));
     grid-template-rows: 1fr 1fr 1fr;
     gap: 2rem;
+    min-height: 90%;;
 }
 
 .card {
-    height: 100%;
-    background: lightgray;
     display: grid;
     grid-template-rows: 3rem min-content 1fr;
     justify-content: start;
     border-radius: 8px;
+    align-items: center;
+    background: grey;
 }
 
 .card-title {
-    margin-top: 30px;
     font-size: 1.2rem;
     font-weight: 700;
     padding-left: 4rem;
+    align-self: end;
 }
 
 .card-text {
-    padding: 0.5rem 8rem 0 4rem;
+    width: 70%;
     line-height: 1.3;
+    font-size: 1.2rem;
     padding-top: 5px;
     margin-bottom: 15px;
+    padding-left: 4rem;
 }
 
 .card-icon-container {
@@ -237,17 +258,20 @@ button, input {
 }
 
 #announcements {
-    background: lightgoldenrodyellow;
     grid-area: announcements;
     padding: 2rem 2rem 2rem 0;
 }
 
 #announcements-card {
-    background: rebeccapurple;
+    min-width: 200px;
     display: grid;
+    justify-content: space-between;
+    align-items: center;
     grid-template-rows: 1fr 3px 1fr 3px 1fr;
-    padding: 2rem;
+    padding: 1rem 3rem;
     border-radius: 8px;
+    background: grey;
+    min-height: 85%;
 }
 
 .announcement-title {
@@ -261,27 +285,25 @@ button, input {
 }
 
 .separator {
-    background: white;
     height: 1px;
     opacity: 35%;
+    background: white;
 }
 
 #trending {
     align-items: center;
-    background: lightpink;
     grid-area: trending;
-    padding: 2rem 2rem 2rem 0;
+    padding-right: 2rem;
 }
 
 #trending-card {
     align-items: center;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
-    background: lightslategray;
-    padding: 1rem;
-    row-gap: 1rem;
-    height: 87%;
+    padding: 1.5rem;
+    row-gap: 2rem;
     border-radius: 8px;
+    background: grey;
 }
 
 .trending-entry {
